--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,6 +7,8 @@
     border: none;
     outline: none;
     cursor: pointer;
+
+    display: inline-block
     
 }
 
