--- a/sass/layout/_section-cta.scss
+++ b/sass/layout/_section-cta.scss
@@ -1,6 +1,6 @@
 .cta {
     background-color: var(--color-white);
-    padding: 10.8rem 0rem 30.4rem;
+    padding: 16.7rem 0rem 30.2rem;
 
     display: flex;
     flex-direction: column;
