--- a/sass/layout/_section-grow.scss
+++ b/sass/layout/_section-grow.scss
@@ -1,6 +1,6 @@
 .grow {
     background-color: var(--color-very-pale-blue);
-    padding: 10.2rem 0rem 8.1rem;
+    padding: 8.4rem 0rem 5.4rem;
     position: relative;
 
     &__illustration {
