--- a/sass/layout/_section-hero.scss
+++ b/sass/layout/_section-hero.scss
@@ -1,6 +1,6 @@
 .hero {
     background-color: var(--color-white);
-    padding: 8.85rem 3.95rem 11.4rem;
+    padding: 8.8rem 3.95rem 13.2rem; // 11.4
     text-align: center;
 
     &__header {
