--- a/sass/layout/_section-users.scss
+++ b/sass/layout/_section-users.scss
@@ -1,6 +1,6 @@
 .users {
     background-color: var(--color-very-pale-blue);
-    padding: 1.6rem 0rem 17.2rem;
+    padding: 1.6rem 0rem 11.4rem;
     position: relative;
 
     &__illustration {
